// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.teeapps.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/descriptor.proto";


option java_package = "org.wfanet.measurement.securecomputation.teeapps.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "TeeAppConfigProto";

message TeeAppConfig {
  message VidLabelingConfig {
    string input_base_path = 1;
    string output_base_path = 2;
    oneof ModelFormat {
      string model_blob_text_proto_path = 3;
      string model_blob_riegeli_path = 4;
      string model_line = 5 [
        (google.api.resource_reference).type = "halo.wfanet.org/ModelLine",
        (google.api.field_behavior) = REQUIRED,
        (google.api.field_behavior) = IMMUTABLE
      ];
    }
  }
  message ReachAndFrequencyConfig {
    string labeled_impression_prefix = 1;
    string event_message_type_url = 2;
    map<string, string> event_field_name_mapping = 3;


  }
  oneof WorkType {
    VidLabelingConfig vid_labeling_config = 1;
    ReachAndFrequencyConfig reach_and_frequency_config = 2;
  }
}